--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.datasource.hikari.maximum-pool-size=2
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
